apps/photoprism/manifests/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/version: "221118"
  name: photoprism
  namespace: photoprism
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: photoprism
  serviceName: photoprism
  template:
    metadata:
      annotations:
        checksum.config/md5: 5440125f7f7b1a4b3ca9188561792453
        kubectl.kubernetes.io/default-container: photoprism
      labels:
        app.kubernetes.io/name: photoprism
        app.kubernetes.io/version: "221118"
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: credentials
        - configMapRef:
            name: config
        image: photoprism/photoprism:221118-jammy
        imagePullPolicy: IfNotPresent
        name: photoprism
        ports:
        - containerPort: 2342
          name: http
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
        resources:
          limits:
            cpu: 2500m
          requests:
            cpu: 500m
            memory: 4Gi
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /photoprism/storage
          name: storage
        - mountPath: /photoprism/originals
          name: originals
          readOnly: true
      nodeSelector:
        kubernetes.io/arch: amd64
      restartPolicy: Always
      serviceAccountName: photoprism
      volumes:
      - name: originals
        persistentVolumeClaim:
          claimName: originals
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 300Mi
      storageClassName: qnap-nfs
