apps/photoprism/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/version: "220730"
  name: photoprism
  namespace: photoprism
spec:
  clusterIP: None
  ports:
  - name: http
    port: 2342
    targetPort: http
  selector:
    app.kubernetes.io/name: photoprism
