apps/photoprism/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    reloader.homer/group: Multimedia
    reloader.homer/logo: https://avatars.githubusercontent.com/u/32436079?s=400&v=4
    reloader.homer/name: Photoprism
    reloader.homer/subtitle: Photo management system
    reloader.homer/tag: testing
  labels:
    app.kubernetes.io/name: photoprism
    app.kubernetes.io/version: "221118"
    # probe: enabled
    reloader.homer/enabled: "true"
  name: photoprism
  namespace: photoprism
spec:
  ingressClassName: traefik
  rules:
  - host: photo.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: photoprism
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - photo.ankhmorpork.thaum.xyz
    secretName: photoprism-tls
